# polybool

./: LICENSE  README.md  pyproject.toml
.github/workflows/: pythonpackage.yml
